--- a/contacto.html
+++ b/contacto.html
@@ -1,304 +1,184 @@
 <!DOCTYPE html>
 <html lang="es" class="scroll-smooth">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Copiermaster C&G</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contacto | Copiermaster C&G</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://i.postimg.cc/Fk96WkSm/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp">
-    <link rel="apple-touch-icon" href="https://i.postimg.cc/Fk96WkSm/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp">
-    <meta name="theme-color" content="#84cc16">
+    <link rel="icon" type="image/webp"
+          href="https://i.postimg.cc/Fk96WkSm/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp">
 
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Inter font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
+    <!-- Fonts -->
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap">
 
-    <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f7fafc;
-            color: #4a5568;
-        }
-
-        select {
-            appearance: none;
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' fill='none' stroke='gray' stroke-width='2' viewBox='0 0 24 24'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M19 9l-7 7-7-7'/%3E%3C/svg%3E");
-            background-repeat: no-repeat;
-            background-position: right 0.75rem center;
-            padding-right: 2.5rem;
-        }
+        body { font-family: 'Inter', sans-serif; }
     </style>
 </head>
 
 <body class="bg-gray-100">
 
-<!-- ==========================================================
-     NAVBAR (COHERENTE CON TODO EL SISTEMA)
-=========================================================== -->
+<!-- NAVBAR -->
 <nav class="bg-white shadow-md fixed w-full z-50">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
 
+        <!-- LOGO -->
         <a href="index.html" class="flex items-center">
             <img src="https://i.postimg.cc/Fk96WkSm/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp"
-                 alt="Copiermaster C&G Logo" class="h-20 md:h-28">
+                 class="h-24 md:h-28 object-contain" alt="Copiermaster Logo">
         </a>
 
-        <button id="menu-button" class="md:hidden text-gray-700">
-            <i data-lucide="menu" class="h-8 w-8"></i>
+        <!-- MOBILE BUTTON -->
+        <button id="menu-button" class="md:hidden">
+            <i data-lucide="menu" class="h-8 w-8 text-gray-700"></i>
         </button>
 
+        <!-- NAV LINKS -->
         <div class="hidden md:flex space-x-8 items-center font-semibold">
-            <a href="index.html" class="hover:text-lime-500">Inicio</a>
-            <a href="soluciones.html" class="hover:text-lime-500">Soluciones</a>
-            <a href="impulso-digital.html" class="hover:text-lime-500">Impulso Digital</a>
-            <a href="nosotros.html" class="hover:text-lime-500">Nosotros</a>
-            <a href="contacto.html" class="text-lime-500">Contacto</a>
-            <a href="soporte.html" class="bg-lime-500 text-white px-6 py-2 rounded-full shadow hover:bg-lime-600">Soporte</a>
+            <a href="index.html" class="hover:text-lime-600">Inicio</a>
+            <a href="soluciones.html" class="hover:text-lime-600">Soluciones</a>
+            <a href="nosotros.html" class="hover:text-lime-600">Nosotros</a>
+            <a href="contacto.html" class="text-lime-600">Contacto</a>
+
+            <a href="https://cltechsolutions.crisslombeida.com"
+               class="hover:text-lime-600">
+               Impulso Digital
+            </a>
+
+            <a href="soporte.html"
+               class="bg-lime-600 text-white px-6 py-2 rounded-full shadow hover:bg-lime-700">
+               Soporte
+            </a>
         </div>
     </div>
 
-    <div id="mobile-menu" class="hidden md:hidden bg-white shadow-inner">
-        <a href="index.html" class="block py-3 px-6">Inicio</a>
-        <a href="soluciones.html" class="block py-3 px-6">Soluciones</a>
-        <a href="impulso-digital.html" class="block py-3 px-6">Impulso Digital</a>
-        <a href="nosotros.html" class="block py-3 px-6">Nosotros</a>
-        <a href="contacto.html" class="block py-3 px-6 text-lime-500">Contacto</a>
-        <a href="soporte.html" class="block py-3 px-6 text-white bg-lime-500 text-center">Soporte</a>
+    <!-- MOBILE MENU -->
+    <div id="mobile-menu" class="hidden bg-white shadow-md md:hidden py-4 px-6 space-y-3">
+        <a href="index.html" class="block">Inicio</a>
+        <a href="soluciones.html" class="block">Soluciones</a>
+        <a href="nosotros.html" class="block">Nosotros</a>
+        <a href="contacto.html" class="block text-lime-600 font-bold">Contacto</a>
+        <a href="https://cltechsolutions.crisslombeida.com" class="block">Impulso Digital</a>
+        <a href="soporte.html" class="block text-white bg-lime-600 text-center py-2 rounded-lg">Soporte</a>
     </div>
 </nav>
 
-<!-- ==========================================================
-     CONTACTO
-=========================================================== -->
-<main class="pt-48">
+<!-- HERO -->
+<section class="pt-40 pb-20 bg-gray-900 text-white text-center">
+    <h1 class="text-5xl font-extrabold mb-4">Contáctanos</h1>
+    <p class="text-gray-300 max-w-2xl mx-auto">
+        Estamos disponibles para ayudarte con información, asesoría, soporte y cotizaciones.
+    </p>
+</section>
+
+<!-- CONTACT CONTENT -->
 <section class="py-20">
-    <div class="container mx-auto px-6 grid lg:grid-cols-2 gap-16 items-start">
-
-        <!-- INFO -->
-        <div class="space-y-10">
-            <div>
-                <h2 class="text-4xl font-bold text-gray-800">Estamos aquí para</h2>
-                <h1 class="text-4xl font-bold text-lime-500">Impulsar su productividad</h1>
-                <p class="mt-3 text-lg text-gray-600">a través de tecnología, servicio y eficiencia.</p>
-            </div>
-
-            <div>
-                <h3 class="text-2xl font-bold text-gray-800 border-b-2 border-lime-500 pb-2 inline-block">
-                    Sucursales a nivel nacional
-                </h3>
-
-                <div class="text-sm mt-6 space-y-6">
-
-                    <div>
-                        <h4 class="font-semibold text-lg">Quito</h4>
-                        <p><b>Comercial:</b> ventas.quito@copiermastercyg.com.ec</p>
-                        <p><b>Soporte:</b> soporte.quito@copiermastercyg.com.ec</p>
-                        <p><b>Dirección:</b> Amazonas N36-12 y Corea</p>
-                    </div>
-
-                    <div>
-                        <h4 class="font-semibold text-lg">Guayaquil</h4>
-                        <p><b>Comercial:</b> ventas.guayaquil@copiermastercyg.com.ec</p>
-                        <p><b>Soporte:</b> soporte.guayaquil@copiermastercyg.com.ec</p>
-                        <p><b>Dirección:</b> Edificio World Trade Center</p>
-                    </div>
-
-                    <div>
-                        <h4 class="font-semibold text-lg">Cuenca</h4>
-                        <p><b>Comercial:</b> ventas.cuenca@copiermastercyg.com.ec</p>
-                        <p><b>Soporte:</b> soporte.cuenca@copiermastercyg.com.ec</p>
-                        <p><b>Dirección:</b> Av. Remigio Crespo</p>
-                    </div>
-
-                    <div>
-                        <h4 class="font-semibold text-lg">Ambato</h4>
-                        <p><b>Comercial:</b> ventas.ambato@copiermastercyg.com.ec</p>
-                        <p><b>Soporte:</b> soporte.ambato@copiermastercyg.com.ec</p>
-                        <p><b>Dirección:</b> Av. Atahualpa</p>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
+    <div class="container mx-auto px-6 grid grid-cols-1 lg:grid-cols-2 gap-14">
 
         <!-- FORMULARIO -->
-        <div class="bg-white p-8 rounded-xl shadow-lg border border-gray-200">
+        <div class="bg-white p-10 rounded-3xl shadow-lg border border-gray-200">
 
-            <form class="space-y-6">
+            <h2 class="text-3xl font-bold text-gray-800 mb-6">Envíanos un mensaje</h2>
 
-                <div>
-                    <label class="font-medium text-sm">Nombre completo</label>
-                    <div class="relative">
-                        <i data-lucide="user" class="absolute left-3 top-3 text-gray-400"></i>
-                        <input type="text" class="w-full pl-10 p-3 border rounded-md focus:ring-2 focus:ring-lime-500">
-                    </div>
-                </div>
+            <form action="https://formsubmit.co/serviciotecnico@copiermastercyg.com.ec" method="POST" class="space-y-6">
+
+                <input type="hidden" name="_template" value="table">
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_next" value="https://maxlagartilloia.github.io/?success=true">
 
                 <div>
-                    <label class="font-medium text-sm">Empresa</label>
-                    <input type="text" class="w-full p-3 border rounded-md focus:ring-2 focus:ring-lime-500">
-                </div>
-
-                <div>
-                    <label class="font-medium text-sm">Correo electrónico</label>
-                    <div class="relative">
-                        <i data-lucide="mail" class="absolute left-3 top-3 text-gray-400"></i>
-                        <input type="email" class="w-full pl-10 p-3 border rounded-md focus:ring-2 focus:ring-lime-500">
-                    </div>
+                    <label class="text-gray-700 font-semibold">Nombre completo</label>
+                    <input type="text" name="Nombre" required
+                           class="w-full mt-2 px-4 py-3 bg-gray-100 rounded-xl border focus:ring-lime-500">
                 </div>
 
                 <div>
-                    <label class="font-medium text-sm">Teléfono / WhatsApp</label>
-                    <div class="relative">
-                        <i data-lucide="phone" class="absolute left-3 top-3 text-gray-400"></i>
-                        <input type="text" class="w-full pl-10 p-3 border rounded-md focus:ring-2 focus:ring-lime-500">
-                    </div>
+                    <label class="text-gray-700 font-semibold">Correo electrónico</label>
+                    <input type="email" name="Correo" required
+                           class="w-full mt-2 px-4 py-3 bg-gray-100 rounded-xl border focus:ring-lime-500">
                 </div>
 
                 <div>
-                    <label class="font-medium text-sm">Ciudad</label>
-                    <select class="w-full p-3 border rounded-md focus:ring-2 focus:ring-lime-500">
-                        <option>Quito</option>
-                        <option>Guayaquil</option>
-                        <option>Cuenca</option>
-                        <option>Ambato</option>
-                        <option>Otra</option>
-                    </select>
+                    <label class="text-gray-700 font-semibold">Número de contacto</label>
+                    <input type="text" name="Teléfono"
+                           class="w-full mt-2 px-4 py-3 bg-gray-100 rounded-xl border focus:ring-lime-500">
                 </div>
 
                 <div>
-                    <label class="font-medium text-sm">Asunto</label>
-                    <select class="w-full p-3 border rounded-md focus:ring-2 focus:ring-lime-500">
-                        <option>Solicitud - diagnóstico sin costo</option>
-                        <option>Información de productos</option>
-                        <option>Soporte técnico</option>
-                        <option>Otro</option>
-                    </select>
+                    <label class="text-gray-700 font-semibold">Mensaje</label>
+                    <textarea name="Mensaje" rows="5" required
+                              class="w-full mt-2 px-4 py-3 bg-gray-100 rounded-xl border focus:ring-lime-500"></textarea>
                 </div>
 
-                <div>
-                    <label class="font-medium text-sm">Mensaje</label>
-                    <textarea rows="4"
-                              class="w-full p-3 border rounded-md focus:ring-2 focus:ring-lime-500"></textarea>
-                </div>
-
-                <div class="flex items-center gap-2">
-                    <input type="checkbox" class="h-4 w-4 text-lime-500 rounded">
-                    <span class="text-sm">Acepto la política de privacidad</span>
-                </div>
-
-                <button class="w-full bg-gray-800 text-white px-6 py-3 rounded-md shadow hover:bg-gray-900 flex items-center justify-center gap-2">
-                    Enviar <i data-lucide="send"></i>
+                <button type="submit"
+                        class="w-full bg-lime-600 hover:bg-lime-700 text-white py-3 rounded-xl font-bold text-lg shadow-lg">
+                    Enviar mensaje
                 </button>
-
             </form>
+        </div>
+
+        <!-- INFORMACIÓN -->
+        <div class="space-y-10">
+
+            <div>
+                <h3 class="text-3xl font-bold text-gray-800 mb-4">Nuestras Sucursales</h3>
+
+                <div class="space-y-6 text-gray-700">
+
+                    <div>
+                        <p class="font-semibold text-lg">📍 Lago Agrio</p>
+                        <p>Av. Abdón Calderón y Ernesto Che Guevara<br>Lago Agrio, Sucumbíos</p>
+                    </div>
+
+                    <div>
+                        <p class="font-semibold text-lg">📍 Shushufindi</p>
+                        <p>Av. Unidad Nacional y Argentina<br>Shushufindi, Sucumbíos</p>
+                    </div>
+
+                    <div>
+                        <p class="font-semibold text-lg">📍 Santo Domingo</p>
+                        <p>Cooperativa Nuevo Santo Domingo<br>Santo Domingo, Ecuador</p>
+                    </div>
+
+                    <div>
+                        <p class="font-semibold text-lg">📍 Quito</p>
+                        <p>Calle del Oleoducto y Francisco Becerra S36-16<br>Quito, Ecuador</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div>
+                <h3 class="text-3xl font-bold text-gray-800 mb-4">Contacto Directo</h3>
+
+                <p class="text-gray-700 mb-2">
+                    📞 Línea fija: <strong>06 212 0754</strong>
+                </p>
+
+                <p class="text-gray-700 mb-2">
+                    📱 WhatsApp Soporte: <strong>098 538 0150</strong>
+                </p>
+
+                <p class="text-gray-700">
+                    📧 Email: <strong>serviciotecnico@copiermastercyg.com.ec</strong>
+                </p>
+            </div>
 
         </div>
     </div>
 </section>
 
-<!-- ==========================================================
-     SERVICIOS RÁPIDOS
-=========================================================== -->
-<section class="py-16 bg-gray-200">
-    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-8">
-
-        <div class="relative rounded-lg overflow-hidden h-64 bg-center bg-cover"
-             style="background-image: url('https://images.unsplash.com/photo-1517048676732-d65bc937f952');">
-            <div class="absolute inset-0 bg-black bg-opacity-50"></div>
-            <div class="relative z-10 h-full flex flex-col items-center justify-center text-white">
-                <h3 class="text-2xl font-bold mb-4">Servicio Técnico</h3>
-                <a href="soporte.html" class="bg-gray-700 px-6 py-3 rounded-md hover:bg-gray-800 flex items-center gap-2">
-                    Solicitar <i data-lucide="external-link"></i>
-                </a>
-            </div>
-        </div>
-
-        <div class="relative rounded-lg overflow-hidden h-64 bg-center bg-cover"
-             style="background-image: url('https://images.unsplash.com/photo-1573496773905-f5b17e76b254');">
-            <div class="absolute inset-0 bg-black bg-opacity-50"></div>
-            <div class="relative z-10 h-full flex flex-col items-center justify-center text-white">
-                <h3 class="text-2xl font-bold mb-4">Soporte Técnico</h3>
-                <a href="soporte.html" class="bg-gray-700 px-6 py-3 rounded-md hover:bg-gray-800 flex items-center gap-2">
-                    Solicitar <i data-lucide="external-link"></i>
-                </a>
-            </div>
-        </div>
-
-        <div class="relative rounded-lg overflow-hidden h-64 bg-center bg-cover"
-             style="background-image: url('https://images.unsplash.com/photo-1605224435889-1434881f1633');">
-            <div class="absolute inset-0 bg-black bg-opacity-50"></div>
-            <div class="relative z-10 h-full flex flex-col items-center justify-center text-white">
-                <h3 class="text-2xl font-bold mb-4">Repuestos & Suministros</h3>
-                <a href="soporte.html" class="bg-gray-700 px-6 py-3 rounded-md hover:bg-gray-800 flex items-center gap-2">
-                    Solicitar <i data-lucide="external-link"></i>
-                </a>
-            </div>
-        </div>
-
-    </div>
-</section>
-
-</main>
-
-<!-- ==========================================================
-     FOOTER
-=========================================================== -->
-<footer class="bg-gray-900 text-white py-12">
-    <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8">
-
-        <div>
-            <img src="https://i.postimg.cc/Fk96WkSm/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp"
-                 class="h-36 mb-4">
-        </div>
-
-        <div>
-            <h4 class="font-bold mb-4">Marcas</h4>
-            <ul>
-                <li><a href="nosotros.html#marcas" class="hover:text-lime-500">Nuestras Marcas</a></li>
-                <li><a href="soluciones.html" class="hover:text-lime-500">Equipos</a></li>
-            </ul>
-        </div>
-
-        <div>
-            <h4 class="font-bold mb-4">Impulso Digital</h4>
-            <ul>
-                <li><a href="impulso-digital.html" class="hover:text-lime-500">Landing Pages</a></li>
-                <li><a href="contacto.html" class="hover:text-lime-500">Cotizar</a></li>
-            </ul>
-        </div>
-
-        <div>
-            <h4 class="font-bold mb-4">Legal</h4>
-            <ul>
-                <li><a href="#" class="hover:text-lime-500">Política de Calidad</a></li>
-                <li><a href="#" class="hover:text-lime-500">Privacidad</a></li>
-                <li><a href="#" class="hover:text-lime-500">Términos</a></li>
-            </ul>
-        </div>
-
-    </div>
-
-    <div class="container mx-auto px-6 mt-10 border-t border-gray-700 pt-8 text-center">
-        <p class="text-gray-500 text-sm">&copy; 2025 Copiermaster C&G Soluciones Digitales S.A.</p>
-    </div>
-</footer>
-
-<!-- ==========================================================
-     SCRIPTS
-=========================================================== -->
 <script>
-document.getElementById("menu-button").onclick = () =>
-    document.getElementById("mobile-menu").classList.toggle("hidden");
-
-lucide.createIcons();
+document.addEventListener("DOMContentLoaded", () => {
+    lucide.createIcons();
+});
 </script>
 
 </body>
