--- a/index.html
+++ b/index.html
@@ -708,83 +708,91 @@ document.addEventListener('DOMContentLoaded', () => {
 
     </div>
 </section>
+<!-- CTA FINAL CORPORATIVA -->
+<section class="py-20 bg-gray-900">
+    <div class="container mx-auto px-6 text-center text-white">
+        
+        <h2 class="text-4xl font-extrabold mb-4">
+            Transforme Hoy su Infraestructura de Impresión y Gestión Documental
+        </h2>
 
-<!-- ==========================================================
-     CTA FINAL
-=========================================================== -->
-<section class="py-20 bg-gray-900 text-white">
-    <div class="container mx-auto px-6 text-center max-w-3xl">
-
-        <h2 class="text-4xl font-extrabold mb-6">Transforme su infraestructura documental</h2>
-
-        <p class="text-gray-300 mb-8">
-            Le mostramos exactamente cuánto puede ahorrar mejorando su ecosistema de impresión.
+        <p class="text-lg text-gray-300 max-w-3xl mx-auto mb-8">
+            Reciba una auditoría gratuita, identifique oportunidades de mejora y optimice 
+            su ecosistema documental con tecnología sostenible y servicio certificado.
         </p>
 
-        <a href="contacto.html"
-           class="bg-lime-500 hover:bg-lime-600 text-gray-900 font-semibold px-10 py-4 rounded-full shadow-xl inline-block">
+        <a href="contacto.html" 
+           class="bg-lime-500 hover:bg-lime-600 text-gray-900 font-semibold text-lg px-10 py-4 rounded-full shadow-xl transition transform hover:scale-105 inline-block">
             Solicitar Auditoría Gratuita
         </a>
+
+        <p class="text-sm text-gray-500 mt-4">
+            Servicio disponible en todo el Ecuador · Respuesta garantizada en menos de 24 horas
+        </p>
 
     </div>
 </section>
 
-<!-- ==========================================================
-     FOOTER FINAL
-=========================================================== -->
+<!-- FOOTER CORPORATIVO -->
 <footer class="bg-gray-900 text-white py-16">
     <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-12">
 
+        <!-- LOGO + DESCRIPCIÓN -->
         <div>
-            <img src="https://i.postimg.cc/6qRNQd57/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp"
+            <img src="https://i.postimg.cc/6qRNQd57/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp" 
+                 alt="Copiermaster C&G Logo" 
                  class="h-32 mb-4">
+
             <p class="text-gray-400 text-sm leading-relaxed">
-                COPIERMASTER C&G — 13 años transformando el Ecuador con soluciones digitales,
-                impresión sostenible y soporte técnico certificado.
+                COPIERMASTER C&G Soluciones Digitales S.A.<br>
+                13 años transformando el Ecuador con soluciones digitales, impresión sostenible,
+                gestión documental y soporte técnico certificado.
             </p>
         </div>
 
+        <!-- SOLUCIONES -->
         <div>
             <h4 class="text-lg font-bold mb-4">Soluciones</h4>
             <ul class="space-y-3 text-gray-400">
-                <li><a href="soluciones.html#outsourcing" class="hover:text-lime-500">Outsourcing</a></li>
-                <li><a href="soluciones.html#gestion" class="hover:text-lime-500">Gestión Documental</a></li>
-                <li><a href="soluciones.html#escaners" class="hover:text-lime-500">Escáneres</a></li>
+                <li><a href="soluciones.html#outsourcing" class="hover:text-lime-500 transition">Outsourcing de Impresión</a></li>
+                <li><a href="soluciones.html#gestion" class="hover:text-lime-500 transition">Gestión Documental</a></li>
+                <li><a href="soluciones.html#escaners" class="hover:text-lime-500 transition">Escáneres Profesionales</a></li>
+                <li><a href="soluciones.html#proveduria" class="hover:text-lime-500 transition">Proveeduría Integral</a></li>
+                <li><a href="soluciones.html#servicio-tecnico" class="hover:text-lime-500 transition">Servicio Técnico Certificado</a></li>
+                <li><a href="soluciones.html#software" class="hover:text-lime-500 transition">Software Empresarial</a></li>
             </ul>
         </div>
 
+        <!-- CORPORATIVO -->
         <div>
             <h4 class="text-lg font-bold mb-4">Corporativo</h4>
             <ul class="space-y-3 text-gray-400">
-                <li><a href="nosotros.html" class="hover:text-lime-500">Quiénes Somos</a></li>
-                <li><a href="nosotros.html#mision" class="hover:text-lime-500">Misión</a></li>
-                <li><a href="nosotros.html#vision" class="hover:text-lime-500">Visión</a></li>
+                <li><a href="nosotros.html" class="hover:text-lime-500 transition">Quiénes Somos</a></li>
+                <li><a href="nosotros.html#mision" class="hover:text-lime-500 transition">Misión</a></li>
+                <li><a href="nosotros.html#vision" class="hover:text-lime-500 transition">Visión</a></li>
+                <li><a href="nosotros.html#valores" class="hover:text-lime-500 transition">Valores</a></li>
+                <li><a href="nosotros.html#marcas" class="hover:text-lime-500 transition">Marcas Aliadas</a></li>
+                <li><a href="contacto.html" class="hover:text-lime-500 transition">Contacto</a></li>
             </ul>
         </div>
 
+        <!-- SERVICIOS ADICIONALES -->
         <div>
             <h4 class="text-lg font-bold mb-4">Servicios Adicionales</h4>
             <ul class="space-y-3 text-gray-400">
-                <li><a href="https://cltechsolutions.crisslombeida.com" class="hover:text-lime-500">Impulso Digital</a></li>
-                <li><a href="soporte.html" class="hover:text-lime-500">Help Desk</a></li>
+                <li><a href="https://cltechsolutions.crisslombeida.com" target="_blank" class="hover:text-lime-500 transition">Impulso Digital</a></li>
+                <li><a href="soporte.html" class="hover:text-lime-500 transition">Help Desk - Soporte Técnico</a></li>
+                <li><a href="#" class="hover:text-lime-500 transition">Política de Privacidad</a></li>
+                <li><a href="#" class="hover:text-lime-500 transition">Términos y Condiciones</a></li>
             </ul>
         </div>
 
     </div>
 
+    <!-- COPYRIGHT -->
     <div class="container mx-auto px-6 text-center border-t border-gray-700 pt-8 mt-10">
         <p class="text-gray-500 text-sm">
             &copy; 2024 Copiermaster C&G Soluciones Digitales S.A. — Todos los derechos reservados.
         </p>
     </div>
 </footer>
-
-<!-- FINAL SCRIPTS -->
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-    lucide.createIcons();
-});
-</script>
-
-</body>
-</html>
