--- a/contacto.html
+++ b/contacto.html
@@ -47,10 +47,7 @@
             <a href="nosotros.html" class="hover:text-lime-600">Nosotros</a>
             <a href="contacto.html" class="text-lime-600">Contacto</a>
 
-            <a href="https://cltechsolutions.crisslombeida.com"
-               class="hover:text-lime-600">
-               Impulso Digital
-            </a>
+            <a href="https://cltechsolutions.crisslombeida.com" class="hover:text-lime-600">Impulso Digital</a>
 
             <a href="soporte.html"
                class="bg-lime-600 text-white px-6 py-2 rounded-full shadow hover:bg-lime-700">
@@ -74,7 +71,7 @@
 <section class="pt-40 pb-20 bg-gray-900 text-white text-center">
     <h1 class="text-5xl font-extrabold mb-4">Contáctanos</h1>
     <p class="text-gray-300 max-w-2xl mx-auto">
-        Estamos disponibles para ayudarte con información, asesoría, soporte y cotizaciones.
+        Estamos disponibles para ayudarte con asesoría, soporte, cotizaciones y soluciones empresariales.
     </p>
 </section>
 
@@ -127,48 +124,54 @@
         <!-- INFORMACIÓN -->
         <div class="space-y-10">
 
+            <!-- SUCURSALES -->
             <div>
                 <h3 class="text-3xl font-bold text-gray-800 mb-4">Nuestras Sucursales</h3>
 
                 <div class="space-y-6 text-gray-700">
 
+                    <!-- Lago Agrio -->
                     <div>
                         <p class="font-semibold text-lg">📍 Lago Agrio</p>
-                        <p>Av. Abdón Calderón y Ernesto Che Guevara<br>Lago Agrio, Sucumbíos</p>
+                        <p>Av. Abdón Calderón y Ernesto Che Guevara</p>
+                        <p>Tel: 06 212 0754 · WhatsApp: 098 538 0150</p>
                     </div>
 
+                    <!-- Shushufindi -->
                     <div>
                         <p class="font-semibold text-lg">📍 Shushufindi</p>
-                        <p>Av. Unidad Nacional y Argentina<br>Shushufindi, Sucumbíos</p>
+                        <p>Av. Unidad Nacional y Argentina</p>
                     </div>
 
+                    <!-- Santo Domingo -->
                     <div>
                         <p class="font-semibold text-lg">📍 Santo Domingo</p>
-                        <p>Cooperativa Nuevo Santo Domingo<br>Santo Domingo, Ecuador</p>
+                        <p>Cooperativa Nuevo Santo Domingo</p>
                     </div>
 
+                    <!-- Quito -->
                     <div>
                         <p class="font-semibold text-lg">📍 Quito</p>
-                        <p>Calle del Oleoducto y Francisco Becerra S36-16<br>Quito, Ecuador</p>
+                        <p>Calle del Oleoducto y Francisco Becerra S36-16</p>
+                    </div>
+
+                    <!-- Ambato (nuevo) -->
+                    <div>
+                        <p class="font-semibold text-lg">📍 Ambato</p>
+                        <p>Luis Alberto Valencia Córdoba, diagonal a la Lubricadora Izurieta</p>
+                        <p>WhatsApp: <strong>099 956 9545</strong></p>
                     </div>
 
                 </div>
             </div>
 
+            <!-- CONTACTO DIRECTO -->
             <div>
                 <h3 class="text-3xl font-bold text-gray-800 mb-4">Contacto Directo</h3>
 
-                <p class="text-gray-700 mb-2">
-                    📞 Línea fija: <strong>06 212 0754</strong>
-                </p>
-
-                <p class="text-gray-700 mb-2">
-                    📱 WhatsApp Soporte: <strong>098 538 0150</strong>
-                </p>
-
-                <p class="text-gray-700">
-                    📧 Email: <strong>serviciotecnico@copiermastercyg.com.ec</strong>
-                </p>
+                <p class="text-gray-700 mb-2">📞 Línea fija: <strong>06 212 0754</strong></p>
+                <p class="text-gray-700 mb-2">📱 WhatsApp Soporte: <strong>098 538 0150</strong></p>
+                <p class="text-gray-700">📧 Email: <strong>serviciotecnico@copiermastercyg.com.ec</strong></p>
             </div>
 
         </div>
