--- a/soporte.html
+++ b/soporte.html
@@ -10,86 +10,63 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <link rel="icon" type="image/png"
-          href="https://i.postimg.cc/Fk96WkSm/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp">
-
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-    </style>
+      href="https://i.postimg.cc/Fk96WkSm/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp">
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-gray-100 font-inter">
 
 <!-- NAVBAR -->
 <nav class="bg-white shadow-md fixed w-full z-50">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-        <a href="index.html">
-            <img src="https://i.postimg.cc/6qRNQd57/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp"
-                 class="h-24 md:h-32">
-        </a>
+        <a href="index.html"><img src="https://i.postimg.cc/6qRNQd57/468963711-3994290450845859-6671631898219414239-n-removebg-preview.webp" class="h-24 md:h-32"></a>
 
-        <button id="menu-button" class="md:hidden text-gray-800">
-            <i data-lucide="menu" class="h-8 w-8"></i>
+        <button id="menu-button" class="md:hidden">
+            <i data-lucide="menu" class="h-8 w-8 text-gray-700"></i>
         </button>
 
         <div class="hidden md:flex space-x-8 items-center font-semibold">
-            <a href="index.html" class="hover:text-lime-500">Inicio</a>
-            <a href="soluciones.html" class="hover:text-lime-500">Soluciones</a>
-            <a href="https://cltechsolutions.crisslombeida.com" target="_blank" class="hover:text-lime-500">Impulso Digital</a>
-            <a href="nosotros.html" class="hover:text-lime-500">Nosotros</a>
-            <a href="contacto.html" class="hover:text-lime-500">Contacto</a>
-            <a href="soporte.html" class="bg-lime-500 text-white px-6 py-2 rounded-full shadow hover:bg-lime-600">Soporte</a>
+            <a href="index.html">Inicio</a>
+            <a href="soluciones.html">Soluciones</a>
+            <a href="nosotros.html">Nosotros</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="https://cltechsolutions.crisslombeida.com" target="_blank">Impulso Digital</a>
+            <a href="soporte.html" class="bg-lime-500 text-white px-6 py-2 rounded-full shadow">Soporte</a>
         </div>
     </div>
 
-    <div id="mobile-menu" class="hidden md:hidden bg-white shadow-inner">
-        <a href="index.html" class="block py-3 px-6">Inicio</a>
-        <a href="soluciones.html" class="block py-3 px-6">Soluciones</a>
-        <a href="https://cltechsolutions.crisslombeida.com" target="_blank" class="block py-3 px-6">Impulso Digital</a>
-        <a href="nosotros.html" class="block py-3 px-6">Nosotros</a>
-        <a href="contacto.html" class="block py-3 px-6">Contacto</a>
-        <a href="soporte.html" class="block py-3 px-6 bg-lime-500 text-white text-center font-semibold">Soporte</a>
+    <div id="mobile-menu" class="hidden bg-white shadow-md md:hidden py-4 px-6 space-y-3">
+        <a href="index.html">Inicio</a>
+        <a href="soluciones.html">Soluciones</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="contacto.html">Contacto</a>
+        <a href="https://cltechsolutions.crisslombeida.com" target="_blank">Impulso Digital</a>
+        <a href="soporte.html" class="bg-lime-500 text-white text-center block py-2 rounded-lg">Soporte</a>
     </div>
 </nav>
 
 <!-- HEADER -->
-<header class="pt-48 pb-12 bg-gray-50 text-center">
+<header class="pt-48 pb-12 text-center">
     <h1 class="text-5xl font-extrabold text-gray-800">Centro de Soporte Técnico</h1>
-
     <p class="text-lg text-gray-600 mt-4 max-w-2xl mx-auto">
-        Seleccione la opción para generar un ticket de soporte. Nuestro equipo lo atenderá con prioridad.
+        Reporte sus novedades técnicas y genere un ticket para seguimiento.
     </p>
 
     <div class="max-w-3xl mx-auto mt-10 p-6 bg-white rounded-2xl shadow-lg border-l-4 border-lime-500">
-        <h3 class="text-xl font-bold text-gray-800">Correo oficial del área técnica</h3>
-        <p class="text-gray-600 mt-2"><strong>serviciotecnico@copiermastercyg.com.ec</strong></p>
+        <h3 class="text-xl font-bold">Correo oficial del área técnica</h3>
+        <p class="text-gray-600 mt-2 font-semibold">serviciotecnico@copiermastercyg.com.ec</p>
     </div>
 
-    <!-- BOTÓN PARA GENERAR TICKET -->
-    <div class="mt-10">
-        <a href="ticket.html"
-           class="inline-flex items-center gap-3 bg-lime-600 hover:bg-lime-700 text-white px-10 py-4 rounded-full text-lg font-bold shadow-lg transition">
-            Generar Ticket de Soporte
-            <i data-lucide="ticket" class="h-6 w-6"></i>
-        </a>
-    </div>
+    <a href="ticket.html"
+       class="mt-10 inline-block bg-lime-600 hover:bg-lime-700 text-white font-semibold px-10 py-4 rounded-full shadow-lg text-lg">
+        Crear Ticket de Soporte
+    </a>
 </header>
 
-<!-- FOOTER -->
-<footer class="bg-gray-900 text-white py-12 mt-20">
-    <div class="container mx-auto px-6 text-center">
-        <p class="text-gray-400 text-sm">
-            &copy; 2024 Copiermaster C&G Soluciones Digitales S.A. · Todos los derechos reservados.
-        </p>
-    </div>
-</footer>
-
 <script>
-document.addEventListener("DOMContentLoaded", () => {
-    document.getElementById("menu-button").addEventListener("click", () => {
-        document.getElementById("mobile-menu").classList.toggle("hidden");
-    });
-    lucide.createIcons();
+document.getElementById("menu-button").addEventListener("click", () => {
+    document.getElementById("mobile-menu").classList.toggle("hidden");
 });
+lucide.createIcons();
 </script>
 
 </body>
