--- a/nosotros.html
+++ b/nosotros.html
@@ -262,8 +262,8 @@
 
     </div>
 </section>
-
-<!-- MARCAS ALIADAS -->
+    
+<!-- MARCAS ALIADAS – CORREGIDO -->
 <section class="py-24 bg-gray-50">
     <div class="container mx-auto px-6 max-w-4xl text-center">
 
@@ -272,24 +272,33 @@
         </h2>
 
         <p class="text-lg text-gray-600 mb-12 max-w-2xl mx-auto">
-            Trabajamos junto a líderes tecnológicos internacionales, garantizando equipos
-            robustos, confiables y sostenibles.
+            Trabajamos junto a líderes tecnológicos internacionales, garantizando equipos robustos,
+            confiables y sostenibles.
         </p>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
 
+            <!-- Ricoh -->
             <div class="p-6 bg-white rounded-2xl shadow hover:shadow-xl transition">
-                <img src="https://i.postimg.cc/Y0Vt0pGg/ricoh-logo.png" class="h-16 mx-auto mb-4">
+                <img src="https://i.postimg.cc/Y0Vt0pGg/ricoh-logo.png"
+                     alt="Ricoh Logo"
+                     class="h-16 mx-auto mb-4">
                 <p class="text-gray-600">Soluciones globales en impresión y digitalización.</p>
             </div>
 
+            <!-- Kyocera -->
             <div class="p-6 bg-white rounded-2xl shadow hover:shadow-xl transition">
-                <img src="https://i.postimg.cc/W12FkM0K/kyocera-logo.png" class="h-16 mx-auto mb-4">
+                <img src="https://i.postimg.cc/W12FkM0K/kyocera-logo.png"
+                     alt="Kyocera Logo"
+                     class="h-16 mx-auto mb-4">
                 <p class="text-gray-600">Equipos eficientes y sostenibles con larga vida útil.</p>
             </div>
 
+            <!-- Lexmark -->
             <div class="p-6 bg-white rounded-2xl shadow hover:shadow-xl transition">
-                <img src="https://i.postimg.cc/tJ0M4pXb/lexmark-logo.png" class="h-16 mx-auto mb-4">
+                <img src="https://i.postimg.cc/tJ0M4pXb/lexmark-logo.png"
+                     alt="Lexmark Logo"
+                     class="h-16 mx-auto mb-4">
                 <p class="text-gray-600">Tecnología inteligente para altos volúmenes.</p>
             </div>
 
@@ -297,7 +306,6 @@
 
     </div>
 </section>
-
 <!-- CTA FINAL -->
 <section class="py-20 bg-gray-900">
     <div class="container mx-auto px-6 text-center text-white">
